samples/_failures_safe/1761152184_9df917_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8bd8cfac.c: In function ‘main’:
./samples/SAFE/__tmp_8bd8cfac.c:139:28: error: missing terminating " character
  139 |                     printf("Invalid second
      |                            ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_8bd8cfac.c:139:21: error: expected expression at end of input
  139 |                     printf("Invalid second
      |                     ^~~~~~
./samples/SAFE/__tmp_8bd8cfac.c:139:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8bd8cfac.c:139:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8bd8cfac.c:139:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8bd8cfac.c:139:21: error: expected declaration or statement at end of input
